--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@dookdiks/utils": "^3.2.1",
     "@prisma/client": "5.9.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
