--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@faker-js/faker": "^8.4.1",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
+    "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.19",
@@ -32,6 +33,7 @@
     "lodash": "^4.17.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
+    "@types/node-forge": "^1.3.11",
     "tsc-alias": "^1.8.8",
     "typescript": "^5.3.3"
   },
@@ -42,12 +44,14 @@
     "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "http": "0.0.1-security",
     "jest-mock-extended": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "minio": "^7.1.3",
+    "node-forge": "^1.3.1",
     "nodemon": "^3.0.3",
     "prisma": "^5.9.1",
     "ts-node": "^10.9.2",
