--- a/package.json
+++ b/package.json
@@ -22,18 +22,18 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/bcrypt": "^5.0.2",
-    "@types/jest": "^29.5.12",
     "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.19",
+    "@types/node-forge": "^1.3.11",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "jest-html-reporters": "^3.1.7",
     "lodash": "^4.17.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
-    "@types/node-forge": "^1.3.11",
     "tsc-alias": "^1.8.8",
     "typescript": "^5.3.3"
   },
@@ -42,6 +42,7 @@
     "@prisma/client": "5.9.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -55,6 +56,7 @@
     "nodemon": "^3.0.3",
     "prisma": "^5.9.1",
     "ts-node": "^10.9.2",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   }
 }
