create 2 files and update 1 file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,27 @@
 version: "3.8"
 
 services:
+  # backend:
+  #   container_name: backend
+  #   image: backend
+  #   build:
+  #     context: ./
+  #     dockerfile: backend.dockerfile
+  #   ports:
+  #     - 5100:5100
+  #   environment:
+  #     - PORT=5100
+  #     - DATABASE_URL=postgres://admin:adminpassword@postgres:5432/cpespace
+  #     - MINIO_ENDPOINT=minio
+  #     - MINIO_PORT=9000
+  #     - MINIO_ACCESS_KEY=NvyrAOeXthfbguezGizGxIqLrQbv6ROC
+  #     - MINIO_SECRET_KEY=LEXNjqN0OlW53cHFTsBZfc7q2NGjZiIs
+  #     - API_TOKEN=cNKsNpdNMiJEdbUqJPFnOKfddMNjoSefOaThnegfUCbtPWxiOsEYAXhPhgAUvufd
+  #     - JWT_SECRET=Q9gvhoWTWDczoyMB2FcDPDMqSiHQhijb
+  #     - CLIENT_DOMAIN=http://localhost:3000
+
   postgres:
+    container_name: postgres
     image: postgres
     restart: always
     ports:
@@ -14,6 +34,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   minio:
+    container_name: minio
     image: minio/minio
     ports:
       - "9000:9000"
