--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ MINIO_ACCESS_KEY="randomaccesskey"
 API_TOKEN="randomapitoken"
 
 JWT_SECRET="randomjwtsecret"
+
+CLIENT_DOMAIN="http://localhost:3000"
