--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "http": "0.0.1-security",
     "jest-mock-extended": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "mailersend": "^2.2.0",
     "minio": "^7.1.3",
     "node-forge": "^1.3.1",
     "nodemon": "^3.0.3",
