--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/uuid": "^9.0.8",
+    "@types/validator": "^13.11.9",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -58,6 +59,7 @@
     "prisma": "^5.9.1",
     "ts-node": "^10.9.2",
     "uuid": "^9.0.1",
+    "validator": "^13.11.0",
     "zod": "^3.22.4"
   }
 }
