--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prisma:studio": "npx prisma studio",
     "postinstall": "npm run prisma:generate",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "clean": "pnpm exec prettier . --write"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,7 @@
     "jest": "^29.7.0",
     "jest-html-reporters": "^3.1.7",
     "lodash": "^4.17.21",
+    "prettier": "^3.2.5",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
