--- a/package.json
+++ b/package.json
@@ -2,35 +2,66 @@
   "name": "cpe-space-backend",
   "version": "0.0.1",
   "description": "This is the backend for the CPE Space project",
-  "main": "dist/server.js",
+  "main": "dist/src/server.js",
   "scripts": {
     "dev": "nodemon",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "build": "tsc && tsc-alias",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "prisma:generate": "npx prisma generate",
     "prisma:migrate": "npx prisma migrate dev",
     "prisma:studio": "npx prisma studio",
-    "postinstall": "npm run prisma:generate"
+    "postinstall": "npm run prisma:generate",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "clean": "pnpm exec prettier . --write"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.19",
+    "@types/node-forge": "^1.3.11",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
+    "lodash": "^4.17.21",
+    "prettier": "^3.2.5",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.2",
     "tsc-alias": "^1.8.8",
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@dookdiks/utils": "^3.2.1",
     "@prisma/client": "5.9.1",
+    "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
+    "@types/validator": "^13.11.9",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "http": "0.0.1-security",
+    "jest-mock-extended": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mailersend": "^2.2.0",
     "minio": "^7.1.3",
+    "node-forge": "^1.3.1",
     "nodemon": "^3.0.3",
     "prisma": "^5.9.1",
     "ts-node": "^10.9.2",
+    "uuid": "^9.0.1",
+    "validator": "^13.11.0",
     "zod": "^3.22.4"
   }
 }
