--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ MINIO_SECRET_KEY="ramdomsecretkey"
 MINIO_ACCESS_KEY="randomaccesskey"
 
 API_TOKEN="randomapitoken"
+
+JWT_SECRET="randomjwtsecret"
+
+CLIENT_DOMAIN="http://localhost:3000"
