--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,51 @@
 version: '3.8'
 
 services:
+  # backend:
+  #   container_name: backend
+  #   image: backend
+  #   build:
+  #     context: ./
+  #     dockerfile: backend.dockerfile
+  #   ports:
+  #     - 5100:5100
+  #   environment:
+  #     - PORT=5100
+  #     - DATABASE_URL=postgres://admin:adminpassword@postgres:5432/cpespace
+  #     - MINIO_ENDPOINT=minio
+  #     - MINIO_PORT=9000
+  #     - MINIO_ACCESS_KEY=NvyrAOeXthfbguezGizGxIqLrQbv6ROC
+  #     - MINIO_SECRET_KEY=LEXNjqN0OlW53cHFTsBZfc7q2NGjZiIs
+  #     - API_TOKEN=cNKsNpdNMiJEdbUqJPFnOKfddMNjoSefOaThnegfUCbtPWxiOsEYAXhPhgAUvufd
+  #     - JWT_SECRET=Q9gvhoWTWDczoyMB2FcDPDMqSiHQhijb
+  #     - CLIENT_DOMAIN=http://localhost:3000
+
   postgres:
+    container_name: postgres
     image: postgres
     restart: always
     ports:
-      - "5432:5432"
+      - '5432:5432'
     environment:
       POSTGRES_DB: cpespace
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: adminpassword
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    
+
   minio:
+    container_name: minio
     image: minio/minio
-    command: server /data
-    environment:
-      MINIO_ACCESS_KEY: NvyrAOeXthfbguezGizGxIqLrQbv6ROC
-      MINIO_SECRET_KEY: LEXNjqN0OlW53cHFTsBZfc7q2NGjZiIs
     ports:
-      - "9000:9000"
+      - '9000:9000'
+      - '9001:9001'
     volumes:
       - minio_data:/data
+    environment:
+      MINIO_ROOT_USER: NvyrAOeXthfbguezGizGxIqLrQbv6ROC
+      MINIO_ROOT_PASSWORD: LEXNjqN0OlW53cHFTsBZfc7q2NGjZiIs
+    command: server --console-address ":9001" /data
 
 volumes:
   postgres_data:
-  minio_data:
+  minio_data: {}
